# ClearSAR

./: .gitignore  Dino_Detection.py  README.md  RFI_dataset.py  check_yolo_bboxes.py  coco_to_yolo.py  creds.json  first_submission.json  indent_json.py  main.py  normalization_factors.py  open_dataset.py  pyproject.toml  requirements.txt  rf-detr.py  run.sh  satmae.py  starter_pack.ipynb  test.py  train.py  transformation.py  utils.py  yolo.py
.history/: .gitignore_20260307171019  .gitignore_20260307171021  .gitignore_20260307171025  .gitignore_20260307171031  .gitignore_20260307171032  .gitignore_20260307171035  .gitignore_20260307171037  .gitignore_20260307171041  .gitignore_20260307171045  .gitignore_20260307171055  .gitignore_20260307171059  README_20260307152520.md  README_20260307152521.md  README_20260307152530.md  README_20260307152531.md  README_20260307152534.md  README_20260307152537.md  README_20260307152539.md  README_20260307152540.md  README_20260307152547.md  README_20260307152549.md  README_20260307152551.md  README_20260307152557.md  README_20260307152558.md  README_20260307152606.md  README_20260307152608.md  README_20260307152623.md  README_20260307152629.md  README_20260307152637.md  README_20260307152638.md  README_20260307152639.md  README_20260307152652.md  README_20260307152654.md  README_20260307152702.md  README_20260307152705.md  README_20260307152707.md  README_20260307152709.md  README_20260307152712.md  README_20260307152742.md  README_20260307152747.md  (+185 more)
ClearSAR/: README.md  catalog.v1.parquet  starter_pack.ipynb
SATMAE/: model.py  (+1 more)
(+6 files in other folders)
