[project]
name = "clearsar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "albumentations>=1.4.24",
    "eotdl>=2026.2.27",
    "ipykernel>=7.2.0",
    "notebook>=7.5.4",
    "pillow>=12.1.1",
    "pycocotools>=2.0.11",
    "rfdetr>=1.5.2",
    "torch>=2.10.0",
    "torchvision>=0.25.0",
    "ultralytics>=8.4.21",
]
